<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<!--    Linear Layout since there are not that many views on screen-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/text1"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingBottom="16dp"
        android:text="@string/welcome_text1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text2"
        style="@style/body_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingBottom="16dp"
        android:text="@string/welcome_text2" />

    <Button
        android:id="@+id/next_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button_text"
        />
</LinearLayout>
</layout>