<?xml version="1.0" encoding="utf-8"?>

<!--Constraint layout for easier grouping of views-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ShoeDetailFragment">

            <TextView
                android:id="@+id/shoeNameText"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/shoe_name"
                app:layout_constraintEnd_toStartOf="@+id/shoeNameEdit"
                app:layout_constraintHorizontal_bias="0.909"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/companyText" />

            <EditText
                android:id="@+id/shoeNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_edit_hint"
                android:text="@={shoe.name}"
                android:minHeight="48dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/shoeNameText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/companyText"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/company_text"
                app:layout_constraintEnd_toStartOf="@+id/companyEdit"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/companyEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/company_edit_hint"
                android:text="@={shoe.company}"
                android:minHeight="48dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/companyText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/sizeEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/size_edit_hint"
                android:text="@={shoe.size}"
                android:minHeight="48dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/sizeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sizeText"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:text="@string/size_text"
                app:layout_constraintEnd_toStartOf="@+id/sizeEdit"
                app:layout_constraintHorizontal_bias="0.826"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoeNameText"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/descriptionText"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="32dp"
                android:text="@string/description_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sizeText" />

            <EditText
                android:id="@+id/descriptionEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description_edit_hint"
                android:text="@={shoe.description}"
                android:minHeight="48dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/descriptionText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/cancelButton"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/saveButton"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>