<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<!--    Linear layout because I wanted all views stacked in a vertical line -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/instructions1"
        style="@style/body_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal"
        android:layout_marginStart="16dp"
        android:paddingBottom="16dp"
        android:text="@string/instructions_text1" />

    <TextView
        android:id="@+id/instructions2"
        style="@style/body_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/instructions_text2" />

    <Button
        android:id="@+id/next_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/next_button_text" />
</LinearLayout>
</layout>